tests/errors/type_mismatch.spectra
// Teste de erros: operação com tipos incompatíveis
module test_type_mismatch;

fn test() -> int {
    let x = 10;
    let y = "hello";
    let z = x + y; // Erro: int + string
    return z;
}
